@@ -1,3 +1,9 @@
+2005-07-23  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* lua/lundump.[ch], lua/ldump.c: Rename VERSION and VERSION0 to
+	LUA_DUMP_VERSION and LUA_DUMP_VERSION0 to avoid clashes with
+	VERSION from config.h.
+
 2005-07-22  Nathaniel Smith  <njs@pobox.com>
 
 	* monotone.texi (Committing Work): Remove discussion of manifests.
